# IRIS-2017

./: .gitignore  README.md  d
algorithms/: x43.xml
algorithms/src/: CoordSystemKinect.cpp  CoordSystemKinect.hpp  Map.hpp  MapTransformer.cpp  MapTransformer.hpp  RRT.hpp  checkboard_navigation_module.cpp  checkboard_navigation_module.h  claibinit_mod.h  communication.cpp  communication.hpp  data_structure.hpp  debug_ip_server.cpp  debug_ip_server.h  kinect_identification.h  kinect_obstacle_module.cpp  main.cpp  path.hpp  path_planning_module.cpp
algorithms/test_all/: CMakeLists.txt
algorithms/test_kinect/: CMakeLists.txt  main.cpp
algorithms/test_webcam/: CMakeLists.txt  main.cpp  x43.xml  x43_0.xml
arduino_code/Sweep/: Sweep.ino
arduino_code/arduino_code/: FreeSixIMU.cpp  FreeSixIMU.h  arduino_code.ino  iris_pinout.h  pwm_actuator.cpp  pwm_actuator.h  stepper_pulse.h
joy/joystick/: controller_to_net.py  start_joystick.sh  start_remote_joystick.sh  test.cc  test2
open_cv_checkboard2/: CMakeLists.txt  checkboard_navigation.cpp  claibinit_mod.h  precomp.hpp  x107.xml  x87.xml
python_serial_controller/: serial_controller.py  start_all.sh
src/: main_opengl.cpp  simulated_kinect.cpp
wIRIS/: launch_kinect_demo.sh
wIRIS/devel/: .catkin  .rosinstall  setup.sh
wIRIS/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
wIRIS/devel/lib/obstacle_detection/: computer_display
wIRIS/devel/lib/pkgconfig/: obstacle_detection.pc
wIRIS/devel/share/obstacle_detection/cmake/: obstacle_detectionConfig.cmake
wIRIS/launch/: control_laptop.launch  kinect.launch  kinect_params.yaml  odroid_control.launch  odroid_control.launch~  state_machine_params.yaml
wIRIS/src/obstacle_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
wIRIS/src/obstacle_detection/include/: CoordSystemKinect.hpp  Linear.hpp  Map.hpp  TrigLookup.hpp
wIRIS/src/obstacle_detection/src/: CoordSystemKinect.cpp  IRIS_stitch.cpp  TrigLookup.cpp  kinect_obstacle_module.cpp  main.cpp  main_opengl.cpp~
web_interface/: SVG draw.html  index.html  javascript.js  testing.html
web_interface/path_visualization/: J  J.php  J1.json  J2.json  LICENSE.txt  M  index.html  index2.html  indexJ.html  simple-cors-http-server.py  visualization.css  visualization.js  visualization2.css  visualization2.js  visualizationJ.css  visualizationJ.js
