cmake_minimum_required(VERSION 2.8)
project( fullTest )
find_package( OpenCV REQUIRED )
find_package (Threads)
add_executable( fullTest  ../src/kinect_obstacle_module.cpp ../src/checkboard_navigation_module.cpp ../src/CoordSystemKinect.cpp ../src/debug_ip_server.cpp ../src/kinect_obstacle_module.cpp ../src/main.cpp ../src/path_planning_module.cpp )
#target_link_libraries( fullTest ${OpenCV_LIBS} )
#target_link_libraries( fullTest ~/Desktop/open_cv_checkboard/__old_test/opencv-master/build/lib/libopencv_calib3d.so -lopencv_calib3d )
target_link_libraries( fullTest ${OpenCV_LIBS} )
include_directories( /usr/include/ ../src/ )
target_link_libraries (fullTest ${CMAKE_THREAD_LIBS_INIT} -lz -lfreenect)
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++0x" )
