cmake_minimum_required(VERSION 2.8)
project( testKinect )
#find_package( OpenCV REQUIRED )
find_package (Threads)
#find_package(freenect REQUIRED)
add_executable( testKinect  ../src/kinect_obstacle_module.cpp ../src/CoordSystemKinect.cpp ../src/debug_ip_server.cpp main.cpp )
#target_link_libraries( testKinect ${OpenCV_LIBS} )
#target_link_libraries( testKinect ~/Desktop/open_cv_checkboard/__old_test/opencv-master/build/lib/libopencv_calib3d.so -lopencv_calib3d )
#target_link_libraries( testKinect ${OpenCV_LIBS} )
include_directories( /usr/include/ ../src/ )
target_link_libraries (testKinect ${CMAKE_THREAD_LIBS_INIT} -lfreenect -lz)
#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++0x" )
