cmake_minimum_required(VERSION 2.8)
project( testKinect )
find_package (Threads)
add_executable( testKinect  ../src/kinect_obstacle_module.cpp ../src/CoordSystemKinect.cpp ../src/debug_ip_server.cpp main.cpp )
include_directories( /usr/include/ ../src/ )
target_link_libraries (testKinect ${CMAKE_THREAD_LIBS_INIT} -lfreenect -lz)
